KIALI-3060 Reduce developer API cropping - Increase the dev API menu width to prevent cropping (at least for today's entries) - Increase the overall width of usable space (to 90%) for all of the pages using the   current theme.

--- a/themes/canvas/static/style.css
+++ b/themes/canvas/static/style.css
@@ -95,19 +95,19 @@
 -----------------------------------------------------------------*/
 
 @media (min-width: 576px) {
-	.container { max-width: 540px; }
+	.container { max-width: 90%; }
 }
 
 @media (min-width: 768px) {
-	.container { max-width: 750px; }
+	.container { max-width: 90%; }
 }
 
 @media (min-width: 992px) {
-	.container { max-width: 970px; }
+	.container { max-width: 90%; }
 }
 
 @media (min-width: 1200px) {
-	.container { max-width: 1170px; }
+	.container { max-width: 90%; }
 }
 
 
